修正會員管理
