# swagger_output.json
@@ -7,12 +7,12 @@
   },
   "servers": [
     {
-      "url": "https://hexschool-mailgun.onrender.com",
-      "description": "Render"
-    },
-    {
       "url": "http://127.0.0.1:2330",
       "description": "Local"
+    },
+    {
+      "url": "https://hexschool-mailgun.onrender.com",
+      "description": "Render"
     }
   ],
   "tags": [
@@ -466,7 +466,7 @@
               "undefined"
             ],
             "schema": {
-              "type": "boolean"
+              "type": "string"
             }
           },
           {
@@ -522,6 +522,520 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        }
+      }
+    },
+    "/v1/api/Admin/Account/Blacklist/{id}": {
+      "patch": {
+        "tags": [
+          "會員管理"
+        ],
+        "summary": "設定黑名單",
+        "description": "設定黑名單",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "使用者id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Lobinda"
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "lobinda123@test.com"
+                        },
+                        "phone": {
+                          "type": "string",
+                          "example": "0987654321"
+                        },
+                        "address": {
+                          "type": "string",
+                          "example": "地球某個角落"
+                        },
+                        "date_of_birth": {
+                          "type": "string",
+                          "example": "2006-08-18T00:00:00.000Z"
+                        },
+                        "role": {
+                          "type": "string",
+                          "example": "user"
+                        },
+                        "remarks": {
+                          "type": "string",
+                          "example": ""
+                        },
+                        "is_blacklisted": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Lobinda"
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "lobinda123@test.com"
+                        },
+                        "phone": {
+                          "type": "string",
+                          "example": "0987654321"
+                        },
+                        "address": {
+                          "type": "string",
+                          "example": "地球某個角落"
+                        },
+                        "date_of_birth": {
+                          "type": "string",
+                          "example": "2006-08-18T00:00:00.000Z"
+                        },
+                        "role": {
+                          "type": "string",
+                          "example": "user"
+                        },
+                        "remarks": {
+                          "type": "string",
+                          "example": ""
+                        },
+                        "is_blacklisted": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Error Msg"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Error Msg"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Mail not verified"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Mail not verified"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "description": "會員資料",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "is_blacklisted": {
+                    "type": "boolean",
+                    "enum": [
+                      "1",
+                      "0"
+                    ],
+                    "example": "1"
+                  }
+                },
+                "required": [
+                  "is_blacklisted"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
+    "/v1/api/Admin/Account/RoleCharacter/{id}": {
+      "patch": {
+        "tags": [
+          "會員管理"
+        ],
+        "summary": "設定權限",
+        "description": "設定權限",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "使用者id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Lobinda"
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "lobinda123@test.com"
+                        },
+                        "phone": {
+                          "type": "string",
+                          "example": "0987654321"
+                        },
+                        "address": {
+                          "type": "string",
+                          "example": "地球某個角落"
+                        },
+                        "date_of_birth": {
+                          "type": "string",
+                          "example": "2006-08-18T00:00:00.000Z"
+                        },
+                        "role": {
+                          "type": "string",
+                          "example": "user"
+                        },
+                        "remarks": {
+                          "type": "string",
+                          "example": ""
+                        },
+                        "is_blacklisted": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": ""
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "Lobinda"
+                        },
+                        "email": {
+                          "type": "string",
+                          "example": "lobinda123@test.com"
+                        },
+                        "phone": {
+                          "type": "string",
+                          "example": "0987654321"
+                        },
+                        "address": {
+                          "type": "string",
+                          "example": "地球某個角落"
+                        },
+                        "date_of_birth": {
+                          "type": "string",
+                          "example": "2006-08-18T00:00:00.000Z"
+                        },
+                        "role": {
+                          "type": "string",
+                          "example": "user"
+                        },
+                        "remarks": {
+                          "type": "string",
+                          "example": ""
+                        },
+                        "is_blacklisted": {
+                          "type": "boolean",
+                          "example": false
+                        },
+                        "id": {
+                          "type": "string",
+                          "example": "66d0c762273627e056be5238"
+                        }
+                      }
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Error Msg"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Error Msg"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Mail not verified"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Mail not verified"
+                    }
+                  },
+                  "xml": {
+                    "name": "main"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "description": "會員資料",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "Role": {
+                    "type": "string",
+                    "example": "user,admin"
+                  }
+                },
+                "required": [
+                  "Role"
+                ]
+              }
+            }
           }
         }
       }
